<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ttlock.activity.GetPasswordActivity">
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <RadioButton
            android:id="@+id/permanent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="永久"/>
        <RadioButton
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="期限"/>
        <RadioButton
            android:id="@+id/loop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="循环"/>
        <RadioButton
            android:id="@+id/once"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="单次"/>
        <RadioButton
            android:id="@+id/customized"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/words_customized_passcode"/>
        </RadioGroup>

    <LinearLayout
        android:id="@+id/loop_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="循环"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/loop_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/start_time_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/words_start_date"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/start_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/end_time_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/words_end_date"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/end_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:id="@+id/showPwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@android:color/white"
        android:hint="@string/words_password"
        android:text=""/>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@android:color/holo_red_light"
        android:text="@string/words_get_passcode"/>
</LinearLayout>
